# ghastly

./: .buildinfo  LICENSE  README.md  changelog.txt  core.html  genindex.html  index.html  main.html  material.html  objects.inv  paraview-plot.py  pebble.html  py-modindex.html  pyproject.toml  read_input.html  region.html  requirements.txt  search.html  searchindex.js  setup-example.sh  simulation.html  tests.html
.github/workflows/: deploy-docs.yml
dev_testing/: f3_dev.json  f3_prototype.ipynb  log.lammps  main_cyl_region.txt  pour_main_input.txt  pour_variables.txt  run_fill.py
dev_testing/.ipynb_checkpoints/: f3_dev-checkpoint.json
didymus/: core.py  material.py  region.py
docs/: conf.py  main.rst  pebble.rst  region.rst  simulation.rst
examples/: pour.json  pour_short.json  pour_test.json  pour_test_up.json  recirc_test.json  recircf1-2m.json  recircf1-5m.json  recircf1.json  recircf1_short.json  recircf1_test.json  recircf2-2m.json  recircf2-5m.json  recircf2.json  recircf2_test.json
examples/pre-made-lammps/: README.md  pour-220000-peb.txt  run_lammps.py
ghastly/: __init__.py  core.py  ghastly.py  input.py  main.py  material.py  mc_reader.py  pebble.py  plot_pebs.py  read_input.py  region.py  simulation.py  velocity.py
ghastly/templates/: conecore_template.txt  (+16 more)
openmc_models/: dep-model-dev-test.ipynb  plot_isos.py  plotting.ipynb  run_bcc.sh  scratchmodel.ipynb  static-core-plot.py  static-core.py
tests/: sample_input.json  test_core.py  test_ghastly.py  test_main.py  test_package.py  test_pebble.py  test_read_input.py  test_simulation.py
(+801 files in other folders)
