[build-system]
requires = ["hatchling"]
build-backend =  "hatchling.build"

[project]
name = "ghastly"
version = "0.2.0"
authors = [{name="Zoe Richter", email="zoerichter96@gmail.com"},]
description = "Pebble packing and movement tool"
readme = "README.md"
license.file = "LICENSE"
requires-python = ">=3.8"

[tool.hatch.metadata]
allow-direct-references = true
