[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend =  "hatchling.build"

[project]
name = "ghastly"
authors = [{name="Zoe Richter", email="zoerichter96@gmail.com"},]
description = "Pebble packing and movement tool"
readme = "README.md"
license.file = "LICENSE"
requires-python = ">=3.8"
dynamic = ["version"]

[tool.hatch.version]
path = "ghastly/__about__.py"

[tool.hatch.metadata]
allow-direct-references = false
